syntax = "proto3";

package emotion;

option java_package = "com.ubtrobot.device.ipc";
option java_outer_classname = "DeviceProto";

import "google/protobuf/any.proto";

message Device {

    string id = 1;
    string name = 2;
    string description = 3;
    google.protobuf.Any extension = 4;
}

message DeviceList {

    repeated Device device = 1;
}