syntax = "proto3";

package sensor;

option java_package = "com.ubtrobot.sensor.ipc";
option java_outer_classname = "SensorProto";

message SensorEvent {
    string sensor_id = 1;
    int64 timestamp = 2;
    repeated float value = 3;
}

message ControlOptions {
    string sensor_id = 1;
    string command = 2;
    map<string, string> option = 3;
}

message SensorDevice {
    string id = 1;
    string name = 2;
    string type = 3;
    string description = 4;
}

message SensorDeviceList {
    repeated SensorDevice sensorDevice = 1;
}